2024: Add option to build native image